# PinYinIME

./: .gitignore  CMakeLists.txt  README.md  build.bat  convert_rime_dicts.py  dictionary.h  final_cleanup.py  generate_dicts.py  main.cpp  register.bat  settings.h  trie_dict.cpp  unregister.bat
.github/workflows/: build.yml
dll/: PinyinIMETSF.def  candidate_window.h  class_factory.h  dict_client.h  dictionary.h  dll_main.cpp  ipc_client.h  pinyin_engine.h  s2t_data.h  shm_dict.cpp  shm_dict.h  text_service.cpp  text_service.h  trie_dict.h
exe/: main.cpp  register_window.h  registration.h  service_manager.h  settings_window.h  uninstall_window.h
service/: dict_compiler.cpp  dict_service.cpp
shared/: dict_binary.h  hot_dict.h  ime_ipc.h  ipc_protocol.h  pinyin_settings.h  tsf_guids.h  unique_handle.h  utf_utils.h
test/: run_test.bat  test_client.cpp  test_common.h  test_partial.cpp  test_service.cpp
